fixed mirror size flicker on load

--- a/less/container.less
+++ b/less/container.less
@@ -8,6 +8,7 @@ body, html{
 			background-image: url('../images/silhouette.png');
 			background-repeat: no-repeat;
 			background-position: 5% 100%;
+			display: none;
 		}
 		.info{
 			position: absolute;
